# CodeIsMySpotter

./: README.md
portfolio/: .dockerignore  .gitignore  Cargo.toml  dockerfile  fly.toml
portfolio/src/: main.rs
portfolio/src/pages/: mod.rs
portfolio/src/pages/home/: home.rs
portfolio/src/pages/me/: me.rs
portfolio/src/pages/projects/: projects.rs
portfolio/templates/: base.html  home.html  me.html  projects.html
